--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html {
     --text-color: #FFF;
     --text-color-Credits: rgba(195, 194, 194, 1);
     --bg-card-color: rgba(255, 255, 255, 0.1);
-    --box-shadow-color: rgba(0, 0, 0, 0.7);
+    --box-shadow-color: 0px 15px 25px rgba(0, 0, 0, 0.7);
     --box-shadow-buttons: 0px 15px 25px rgba(0, 0, 0, 0.4);
 }
 
